--- a/AI-ART.xcodeproj/xcshareddata/xcschemes/AI-ART.xcscheme
+++ b/AI-ART.xcodeproj/xcshareddata/xcschemes/AI-ART.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5C4A9A09291BAAD700D2B2B5"
-               BuildableName = "VoiceDraw.app"
-               BlueprintName = "VoiceDraw"
-               ReferencedContainer = "container:VoiceDraw.xcodeproj">
+               BuildableName = "AI-ART.app"
+               BlueprintName = "AI-ART"
+               ReferencedContainer = "container:AI-ART.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,9 +44,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5C4A9A09291BAAD700D2B2B5"
-            BuildableName = "VoiceDraw.app"
-            BlueprintName = "VoiceDraw"
-            ReferencedContainer = "container:VoiceDraw.xcodeproj">
+            BuildableName = "AI-ART.app"
+            BlueprintName = "AI-ART"
+            ReferencedContainer = "container:AI-ART.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
@@ -68,9 +68,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5C4A9A09291BAAD700D2B2B5"
-            BuildableName = "VoiceDraw.app"
-            BlueprintName = "VoiceDraw"
-            ReferencedContainer = "container:VoiceDraw.xcodeproj">
+            BuildableName = "AI-ART.app"
+            BlueprintName = "AI-ART"
+            ReferencedContainer = "container:AI-ART.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
